[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://src/scripts/MatchingGame.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://cedod47tl1ktv" path="res://content/resources/themes/Bebas_button_theme.tres" id="2_header"]
[ext_resource type="Theme" uid="uid://b152vv4v1kumc" path="res://content/resources/themes/Montserrat_button_theme.tres" id="3_body"]
[ext_resource type="Texture2D" uid="uid://bjyxhtpo5etq0" path="res://assets/ui/images/MapBackground.jpg" id="4_bg"]
[ext_resource type="Shader" uid="uid://catxjmc45pfvr" path="res://content/resources/shaders/crt_screen.gdshader" id="5_shader"]
[ext_resource type="AudioStream" uid="uid://dqcdk7o2k8l0o" path="res://assets/audio/sfx/Beeps/mixkit-data-scaner-2847.wav" id="6_buzzer"]
[ext_resource type="AudioStream" uid="uid://caspgfmtl7keh" path="res://assets/audio/sfx/ClickSFX/confirmation_002.ogg" id="7_correct"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_crt"]
shader = ExtResource("5_shader")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.2
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.15
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 0.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.02
shader_parameter/aberration = 0.00500005
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.11
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.3
shader_parameter/vignette_opacity = 0.5

[node name="MatchingGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bg")
expand_mode = 1
stretch_mode = 6

[node name="ColorOverlay" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RoundLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme = ExtResource("2_header")
theme_override_font_sizes/font_size = 42
text = "ROUND 1/3"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme = ExtResource("2_header")
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 56
text = "60"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LivesLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme = ExtResource("2_header")
theme_override_font_sizes/font_size = 42
text = "LIVES: 3"

[node name="Content" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="LeftCol" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Content/LeftCol"]
layout_mode = 2
theme = ExtResource("2_header")
theme_override_font_sizes/font_size = 32
text = "TERMS"
horizontal_alignment = 1

[node name="TermsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/LeftCol"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RightCol" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Content/RightCol"]
layout_mode = 2
theme = ExtResource("2_header")
theme_override_font_sizes/font_size = 32
text = "DEFINITIONS"
horizontal_alignment = 1

[node name="DefinitionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/RightCol"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme = ExtResource("3_body")
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="SubmitButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme = ExtResource("3_body")
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 36
text = "SUBMIT MATCHES"

[node name="FeedbackLayer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="FeedbackLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="FeedbackLabel" type="Label" parent="FeedbackLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_header")
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 120
text = "CORRECT!"

[node name="XLayer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XLabel" type="Label" parent="XLayer"]
modulate = Color(1, 0, 0, 0.8)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_header")
theme_override_font_sizes/font_size = 500
text = "X"

[node name="CRTScreen" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_crt")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuzzerPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_buzzer")

[node name="CorrectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_correct")
